# decurse

./: Cargo.toml  README.md
decurse/: Cargo.toml  README.md
decurse/examples/: benchmark.rs  dfs_paint.rs  dfs_paint_with_unsound.rs  search_with_owning_ref.rs  simple.rs  unsound_usage.rs
decurse/src/: lib.rs  pend_once.rs  sound.rs  unsound.rs
decurse/src/for_macro_only/: mod.rs  pend_once.rs  sound.rs  unsound.rs
decurse/tests/: dfs.rs  test.rs  test_unsound.rs
decurse_macro/: Cargo.toml  README.md
decurse_macro/src/: lib.rs
pinned_vec/: Cargo.toml  README.md
pinned_vec/src/: lib.rs
pinned_vec/tests/: test.rs
src/: lib.rs  pinned_vec.rs
tests/: test.rs
