[package]
name = "decurse"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
waker-fn = "1.1"
decurse_macro = { version = "0.0.1", path = "../decurse_macro/" }
pinned_vec = { version = "0.1", path = "../pinned_vec/" }
scoped-tls = "1.0"
pfn = "0.1"

[dev-dependencies]
owning_ref = "0.4"
