[package]
name = "decurse"
version = "0.0.4"
authors = ["Wisha Wa <wisha.wa@yandex.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Macro to make recursive function run on the heap (i.e. no stack overflow)."
readme = "README.md"
documentation = "https://docs.rs/decurse"
repository = "https://github.com/wishawa/decurse"
keywords = ["recursive", "overflow", "macro"]
categories = ["rust-patterns", "algorithms"]

[dependencies]
waker-fn = "1.1"
decurse_macro = { version = "0.0.1", path = "../decurse_macro/" }
pinned_vec = { version = "0.1", path = "../pinned_vec/" }
scoped-tls = "1.0"
pfn = "0.1"

[dev-dependencies]
owning_ref = "0.4"
