[package]
name = "decurse_macro"
version = "0.0.1"
authors = ["Wisha Wa <wisha.wa@yandex.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Proc macros for the decurse crate."
readme = "README.md"
repository = "https://github.com/wishawa/decurse"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "fold", "extra-traits"] }